vault/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    description: The Vault server's http port
  labels:
    app: vault
  name: vault
spec:
  ports:
  - name: 8200-tcp
    port: 8200
    protocol: TCP
    targetPort: 8200
  selector:
    app: vault
    deploymentconfig: vault
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
