vault/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route                                  
metadata:                                    
  annotations:                               
    description: Route for application's http
  labels:        
    app: vault   
  name: vault    
spec:            
  host: ""       
  to:            
    kind: Service
    name: vault
    weight: 100
status:
  ingress: 
  - conditions:
